# vulkan-project2

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  api.cpp  debugging.hpp  device.hpp  justfile  main.cpp  renderer.hpp  swapchain.hpp  xcompile_toolchain.cmake
shaders/source/: shader.vert
